2008-03-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftp_geturl.man: Separated the documentation of the ftp and
	* ftp.man: ftp::geturl packages into two files.

2007-09-13  Andreas Kupries  <andreask@activestate.com>

	* ftp_geturl.tcl (::ftp::geturl): Fixed the handling of urls which
	* pkgIndex.tcl: are directories instead of files, per the patch
	* ftp.man: coming with [SF Tcllib Bug 1793855], suggested by
	  Gerald Lester. Bumped version of ftp::geturl to 0.2.1.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-05-07  Andreas Kupries  <andreask@activestate.com>

	* ftp.tcl (::ftp::Get): SF Bug 1708350. Do not unset get:channel
	* pkgIndex.tcl: state information to prevent async get from
	* ftp.man: blowing in HandleData. More comments in the
	  code. Version bumped to 2.4.8.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftp.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-11-09  Andreas Kupries  <andreask@activestate.com>

	* ftp.tcl (::ftp::StateHandler): Fixed [Bug 1191607] using the
	* ftp.man: minimum possible change. Exporting information
	* pkgIndex.tcl: accumulated in buffer to msgtext. Version is
	  now 2.4.7.

2006-10-23  Andreas Kupries  <andreask@activestate.com>

	* ftp.tcl (::ftp::StateHandler): Applied patch by Guy Hofkens
	* ftp.man: <hofkensg@users.sourceforge.net>, with small
	* pkgIndex.tcl: modification by myself (removing a no-op), for
	  [SF Tcllib Bug 15822535], reported by same person, fixing an
	  infinite recursion through vwait because the ctrl socket at eof
	  is not closed and immediately waited upon again for more
	  events. Version now 2.4.6.

2006-10-20  Andreas Kupries  <andreask@activestate.com>

	* ftp.tcl: Wrapped several 'unset ftp(state.data)' into 'catch'